--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,13 +24,16 @@
 }
 
 .v-dialog > .v-overlay__content {
-  margin-block-start: env(safe-area-inset-top);
-  margin-block-end: env(safe-area-inset-bottom);
+  margin-block: env(safe-area-inset-top) env(safe-area-inset-bottom);
 }
 
 .v-dialog--fullscreen > .v-overlay__content{
   margin-block-start: env(safe-area-inset-top);
   padding-block-end: env(safe-area-inset-bottom);
+}
+
+.v-overlay__scrim {
+  min-block-size: calc(100% + env(safe-area-inset-top) + env(safe-area-inset-bottom));
 }
 
 /* router view transition fade-slide */
