--- a/public/loader.css
+++ b/public/loader.css
@@ -5,7 +5,7 @@ body {
 html {
   overflow: hidden auto;
   background: var(--initial-loader-bg, #fff);
-  min-block-size: calc(100% + env(safe-area-inset-top));
+  min-block-size: calc(100% + env(safe-area-inset-top) + env(safe-area-inset-bottom));
 }
 
 #loading-bg {
