--- a/public/loader.css
+++ b/public/loader.css
@@ -1,15 +1,5 @@
-body {
-  margin: 0;
-}
-
-html {
-  overflow: hidden auto;
-  background: var(--initial-loader-bg, #fff);
-  min-block-size: calc(100% + env(safe-area-inset-top) + env(safe-area-inset-bottom));
-}
-
 #loading-bg {
-  position: absolute;
+  position: fixed;
   z-index: 9999;
   display: block;
   background: var(--initial-loader-bg, #fff);
