--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,8 +14,9 @@ html.v-overlay-scroll-blocked {
 }
 
 #nprogress .peg {
+  width: 5px;
   box-shadow: 0 0 10px rgb(var(--v-theme-primary)), 0 0 5px rgb(var(--v-theme-primary)) !important;
-      transform: rotate(0deg) translate(0, -1px);
+      transform: rotate(0deg) translate(0, -2px);
 }
 
 .v-toast--bottom {
