--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,6 +14,21 @@ html.v-overlay-scroll-blocked {
   }
 }
 
+@mixin hide-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  html,body {
+    @include hide-scrollbar;
+  }
+}
+
 #nprogress .bar {
   background: rgb(var(--v-theme-primary)) !important;
   inset-block-start: env(safe-area-inset-top) !important;
