feat: 根据路由 meta 动态调整 footer 高度

--- a/src/@layouts/styles/_default-layout.scss
+++ b/src/@layouts/styles/_default-layout.scss
@@ -65,6 +65,10 @@ body,
     block-size: variables.$layout-vertical-nav-footer-height;
   }
 
+  .footer-content-container-noheight {
+    block-size: 0px !important;
+  }
+
   .layout-footer-sticky & {
     position: sticky;
     inset-block-end: 0;
