--- a/src/@layouts/styles/_default-layout.scss
+++ b/src/@layouts/styles/_default-layout.scss
@@ -40,16 +40,18 @@ body,
   padding-block: 1.5rem;
   padding-top: calc(env(safe-area-inset-top) + 4.25rem);
   // display: flex;
-
+  background-color: rgb(var(--v-theme-background));
 
   .page-content-container {
     // flex: 1;
     display: flex;
+    background-color: rgb(var(--v-theme-background));
 
     & > div:first-child {
       flex: auto;
       position: relative;
       width: calc(100vw - variables.$layout-vertical-nav-width - 0.5rem);
+      background-color: rgb(var(--v-theme-background));
     }
   }
 }
@@ -57,6 +59,7 @@ body,
 @media screen and (max-width: 1280px){
   .page-content-container > div:first-child  {
     width: calc(100vw - 1rem) !important;
+    background-color: rgb(var(--v-theme-background));
   }
 }
 
