--- a/src/@layouts/styles/_default-layout.scss
+++ b/src/@layouts/styles/_default-layout.scss
@@ -5,61 +5,60 @@
 @use "@configured-variables" as variables;
 
 html {
-  min-height: calc(100% + env(safe-area-inset-top) + env(safe-area-inset-bottom));
   background: rgb(var(--v-theme-background));
+  min-block-size: calc(100% + env(safe-area-inset-top) + env(safe-area-inset-bottom));
   overflow-y: overlay;
 }
 
 body {
-  overscroll-behavior-y: contain;
-  --webkit-overflow-scrolling: touch;
   background: rgb(var(--v-theme-background));
+  overscroll-behavior-y: contain;
+
+  --webkit-overflow-scrolling: touch;
 }
 
 body,
 #app,
 .v-application {
-  min-height: 100%;
+  min-block-size: 100%;
 }
 
 .layout-vertical-nav {
-  padding-top: env(safe-area-inset-top);
-  padding-bottom: env(safe-area-inset-bottom);
+  padding-block: env(safe-area-inset-top) env(safe-area-inset-bottom);
 }
 
 .navbar-content-container {
-  padding-top: env(safe-area-inset-top);
+  padding-block-start: env(safe-area-inset-top);
 }
 
 .layout-page-content {
   @include mixins.boxed-content(true);
 
-  flex-grow: 1;
   overflow: hidden;
-  // TODO: Use grid gutter variable here
+  flex-grow: 1;
+
+  // TODO: Use grid gutter variable here;
   padding-block: 1.5rem;
-  padding-top: calc(env(safe-area-inset-top) + 4.25rem);
-  // display: flex;
-  background-color: rgb(var(--v-theme-background));
+  padding-block-start: calc(env(safe-area-inset-top) + 4.25rem);
+
+  // display: flex;display
+
 
   .page-content-container {
-    // flex: 1;
+    // flex: 1;flex
     display: flex;
-    background-color: rgb(var(--v-theme-background));
 
     & > div:first-child {
-      flex: auto;
       position: relative;
-      width: calc(100vw - variables.$layout-vertical-nav-width - 0.5rem);
-      background-color: rgb(var(--v-theme-background));
+      flex: auto;
+      inline-size: calc(100vw - variables.$layout-vertical-nav-width - 0.5rem);
     }
   }
 }
 
-@media screen and (max-width: 1280px){
+@media screen and (width <= 1280px){
   .page-content-container > div:first-child  {
-    width: calc(100vw - 1rem) !important;
-    background-color: rgb(var(--v-theme-background));
+    inline-size: calc(100vw - 1rem) !important;
   }
 }
 
@@ -69,7 +68,7 @@ body,
   }
 
   .footer-content-container-noheight {
-    block-size: 0px !important;
+    block-size: 0 !important;
   }
 
   .layout-footer-sticky & {
