优化主题切换器和用户通知组件样式，添加文件大小显示，调整布局和样式变量

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -285,7 +285,7 @@ html.v-overlay-scroll-blocked body {
 }
 
 .v-overlay__content .v-list{
-  padding: 4px !important;
+  padding: 0;
   margin: 0 !important;
   background-color: rgb(var(--v-theme-surface)) !important;
 }
