feat: 添加推荐源类型字段，优化推荐页面分类逻辑和样式

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -281,6 +281,7 @@ html.v-overlay-scroll-blocked body {
 }
 
 .v-overlay__content {
+  padding-block: env(safe-area-inset-top) env(safe-area-inset-bottom);
   transition: opacity 0.2s ease !important;
 }
 
