feat: 移除多个组件的背景颜色以优化样式

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -134,7 +134,6 @@ html.v-overlay-scroll-blocked body {
 
 .backdrop-blur {
   --tw-backdrop-blur: blur(8px)!important;
-
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia)!important;
 }
 
@@ -262,10 +261,25 @@ html.v-overlay-scroll-blocked body {
   inset: 0;
 }
 
-.v-list-item {
-  margin-block: 2px !important;
-  margin-inline: 0 !important;
-  transition: background-color 0.15s ease;
+.v-overlay__content .v-list{
+  /* stylelint-disable-next-line property-no-vendor-prefix */
+  -webkit-backdrop-filter: blur(6px);
+  backdrop-filter: blur(6px);
+  background-color: rgb(var(--v-theme-surface), 0.9) !important;
+}
+
+.v-overlay__content .v-card:not(.bg-primary){
+  /* stylelint-disable-next-line property-no-vendor-prefix */
+  -webkit-backdrop-filter: blur(8px);
+  backdrop-filter: blur(8px);
+  background-color: rgb(var(--v-theme-surface), 0.95) !important;
+
+  .v-list, .v-table {
+    /* stylelint-disable-next-line property-no-vendor-prefix */
+    -webkit-backdrop-filter: none;
+    backdrop-filter: none;
+    background-color: transparent !important;
+  }
 }
 
 .v-list-item:hover {
@@ -283,20 +297,6 @@ html.v-overlay-scroll-blocked body {
 .v-overlay__content {
   margin-block: env(safe-area-inset-top) env(safe-area-inset-bottom);
   transition: opacity 0.2s ease !important;
-}
-
-.v-overlay__content .v-list{
-  padding: 0;
-  margin: 0 !important;
-  background-color: rgb(var(--v-theme-surface)) !important;
-}
-
-.v-overlay__content .v-card:not(.bg-primary){
-  background-color: rgb(var(--v-theme-surface)) !important;
-
-  .v-list, .v-table {
-    background-color: transparent !important;
-  }
 }
 
 .v-menu > .v-overlay__content {
