Refactor page titles and dialog close buttons across multiple views
- Replaced instances of `DialogCloseBtn` with `VDialogCloseBtn` in TransferHistoryView, AccountSettingAbout, AccountSettingSystem, and UserProfileView for consistency.
- Introduced a new component `PageContentTitle` to standardize page titles in SiteCardListView, SubscribeListView, UserListView, and WorkflowListView, improving layout and readability.
- Added keyword filtering functionality in SubscribeListView and SubscribeShareView to enhance user experience during searches.
- Added a new site logo image to the assets.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -134,6 +134,7 @@ html {
 
 .backdrop-blur {
   --tw-backdrop-blur: blur(8px)!important;
+
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia)!important;
 }
 
@@ -318,4 +319,9 @@ html {
 .settings-icon-button {
   flex-shrink: 0;
   min-inline-size: auto;
+}
+
+
+.v-infinite-scroll__side {
+  padding: 0;
 }
