优化样式文件，注释掉冗余的样式设置，调整背景颜色和边框半径，以提升整体视觉效果和用户体验。

--- a/src/@core/scss/base/placeholders/_default-layout-vertical-nav.scss
+++ b/src/@core/scss/base/placeholders/_default-layout-vertical-nav.scss
@@ -7,11 +7,11 @@
 }
 
 %default-layout-vertical-nav-floating-navbar-and-sticky-elevated-navbar-scrolled {
-  @include mixins.elevation(variables.$vertical-nav-navbar-elevation);
+  // @include mixins.elevation(variables.$vertical-nav-navbar-elevation);
 
   // If navbar is contained => Squeeze navbar content on scroll
   @if variables.$layout-vertical-nav-navbar-is-contained {
-    padding-inline: 1rem;
+    // padding-inline: 1rem;
   }
 }
 
