--- a/src/@layouts/styles/_default-layout.scss
+++ b/src/@layouts/styles/_default-layout.scss
@@ -29,6 +29,7 @@ body,
 
 .navbar-content-container {
   padding-block-start: env(safe-area-inset-top);
+  padding-inline: 0.5rem;
 }
 
 .layout-page-content {
