--- a/src/@core/scss/base/placeholders/_misc.scss
+++ b/src/@core/scss/base/placeholders/_misc.scss
@@ -1,7 +1,29 @@
 %blurry-bg {
-  /* stylelint-disable property-no-vendor-prefix */
-  -webkit-backdrop-filter: blur(6px);
-  backdrop-filter: blur(6px);
-  /* stylelint-enable */
-  background-color: rgb(var(--v-theme-surface), 0.8);
+    /* stylelint-disable property-no-vendor-prefix */
+    // -webkit-backdrop-filter: blur(6px);
+    // backdrop-filter: blur(6px);
+    /* stylelint-enable */
+    background-color: rgb(var(--v-theme-surface), 0);
+
+    position: relative;
+    
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: calc(100% + 5rem);
+      pointer-events: none;
+      z-index: -1;
+      background: linear-gradient(
+        to bottom,
+        rgba(var(--v-theme-background), 1) 0%,
+        rgba(var(--v-theme-background), 0.9) 25%,
+        rgba(var(--v-theme-background), 0.7) 50%,
+        rgba(var(--v-theme-background), 0.3) 75%,
+        rgba(var(--v-theme-background), 0.0) 100%
+      );
+    }
+    box-shadow: none;
 }
