优化样式，调整背景模糊效果和颜色，更新组件内边距，增强视觉效果和用户体验。

--- a/src/@layouts/styles/_default-layout.scss
+++ b/src/@layouts/styles/_default-layout.scss
@@ -40,7 +40,8 @@ body,
 
   // TODO: Use grid gutter variable here;
   padding-block: 1.5rem;
-  padding-block-start: calc(env(safe-area-inset-top) + 4.25rem);
+  padding-inline: 0.5rem;
+  padding-block-start: calc(env(safe-area-inset-top) + 4.5rem);
 
   // display: flex;display
 
