优化 Footer 组件中的动态按钮样式，调整按钮属性设置，更新图标颜色以提升视觉效果和用户体验。

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -404,6 +404,7 @@ html.v-overlay-scroll-blocked {
 html[data-theme="transparent"] {
   .v-overlay__content {
     backdrop-filter: blur(10px) !important;    
+    border-radius: 12px !important;
 
     .v-list {
       backdrop-filter: blur(10px);
