修复样式文件中的注释错误，确保过渡效果和内边距设置生效；优化背景透明度设置，提升视觉效果。

--- a/src/@core/scss/base/_default-layout-w-vertical-nav.scss
+++ b/src/@core/scss/base/_default-layout-w-vertical-nav.scss
@@ -17,7 +17,7 @@ $header: ".layout-navbar";
   @if variables.$vertical-nav-navbar-style == "elevated" {
     // Add transition
     #{$header} {
-      // transition: padding 0.2s ease, background-color 0.18s ease;
+      transition: padding 0.2s ease, background-color 0.18s ease;
     }
 
     // If navbar is contained => Add border radius to header
