--- a/src/@core/scss/base/placeholders/_misc.scss
+++ b/src/@core/scss/base/placeholders/_misc.scss
@@ -1,10 +1,6 @@
 %blurry-bg {
     position: relative;
-    /* stylelint-disable property-no-vendor-prefix */
-    // -webkit-backdrop-filter: blur(6px);-webkit-backdrop-filter-webkit-backdrop-filter-webkit-backdrop-filter
-    // backdrop-filter: blur(6px);backdrop-filterbackdrop-filterbackdrop-filter
-    /* stylelint-enable */
-    background-color: transparent;
+    background: transparent;
     box-shadow: none;
     
     &::before {
